apps/native-services/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7476
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: llama-swap
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: native
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 9443
