apps/native-services/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nas
  namespace: native
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.sakul-flee.de`)
      kind: Rule
      middlewares:
        - name: vpn-only
          namespace: wireguard
      services:
        - name: nas
          port: 443
          serversTransport: nas
  tls:
    secretName: nas-sakul-flee-de-tls
