apps/native-services/matrix-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: matrix-federation
  namespace: native
spec:
  entryPoints:
    - matrix-federation
  routes:
    - match: HostSNI(`matrix.sakul-flee.de`)
      services:
        - name: matrix
          port: 8008
